--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Sketch</title>
+    <title>Advanced Chemistry Project</title>
 
     <link rel="stylesheet" type="text/css" href="style.css">
 
@@ -17,8 +17,7 @@
     <div id="controls"></div>
     <script src="sketch.js"></script>
     <button id="sw-go">▶</button>
-    <br>
-    <br>
+    <a href="info.html" target="_blank">Read Me</a>
     <!--<div id="sw-time">00:00:00</div>-->
   </body>
 </html>
